services.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-svc
  namespace: rohitns
spec:
  type: NodePort
 selector:
    app: php
  ports:
    - name: tcp
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: rohitns
spec:
  type: NodePort
  selector:
    app: hello
  ports:
    - name: tcp
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: rohitns
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - name: tcp
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: apache-svc
  namespace: rohitns
spec:
  type: NodePort
  selector:
    app: apache
  ports:
    - name: tcp
      port: 80
      targetPort: 80
