webdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: rohitns
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: public.ecr.aws/a1y7x5u9/web 
        ports:
            - containerPort: 80
        resources:
          limits:
            memory: "100Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: rohitns
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - name: tcp
      port: 80
      targetPort: 80
