allinone.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: suraj

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
  namespace: suraj
  labels:
    app: php
spec:
  selector:
    matchLabels:
      app: php
  replicas: 2
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - name: phpapp
        image: shawnfrost/phpapp:latest
        ports:
            - containerPort: 80
        resources:
          limits:
            memory: "100Mi"
            cpu: "200m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  namespace: suraj
  labels:
    app: hello
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 2
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: helloworld
        image: shawnfrost/hello:latest
        ports:
            - containerPort: 80
        resources:
          limits:
            memory: "100Mi"
            cpu: "200m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: suraj
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: public.ecr.aws/nginx/nginx:1.24-alpine
        ports:
            - containerPort: 80
        resources:
          limits:
            memory: "100Mi"
            cpu: "200m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  namespace: suraj
  labels:
    app: apache
spec:
  selector:
    matchLabels:
      app: apache
  replicas: 2
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: shawnfrost/apache:latest
        ports:
            - containerPort: 80
        resources:
          limits:
            memory: "100Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: php-svc
  namespace: suraj
spec:
  type: NodePort
  selector:
    app: php
  ports:
    - name: tcp
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: suraj
spec:
  type: NodePort
  selector:
    app: hello
  ports:
    - name: tcp
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: suraj
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - name: tcp
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: apache-svc
  namespace: suraj
spec:
  type: NodePort
  selector:
    app: apache
  ports:
    - name: tcp
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: suraj-ingress
  namespace: suraj
  labels:
    app: suraj
  annotations:
    alb.ingress.kubernetes.io/subnets: subnet-01c0da85ce76a3bd1, subnet-04b1561fd04120715, subnet-0faaac6633201295b
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernets.io/listen-ports: '[{"HTTP":80}]'
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: /php*
            backend:
              service:
                name: php-svc
                port:
                  number: 80                        
          - pathType: ImplementationSpecific
            path: /hello*
            backend:
              service:
                name: hello-svc
                port:
                  number: 80
          - pathType: ImplementationSpecific
            path: /apache*
            backend:
              service:
                name: apache-svc
                port:
                  number: 80
          - pathType: ImplementationSpecific
            path: /*
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
