ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rohit-ingress
  namespace: rohitns
  labels:
    app: rohitns
  annotations:
    alb.ingress.kubernetes.io/subnets: subnet-0c122e7bb792f6c66, subnet-0509ebe1d8e04c52b, subnet-09db4ea8cad684953
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernets.io/listen-ports: '[{"HTTP":80}]'
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: /php*
            backend:
              service:
                name: php-svc
                port:
                  number: 80                        
          - pathType: ImplementationSpecific
            path: /hello*
            backend:
              service:
                name: hello-svc
                port:
                  number: 80
          - pathType: ImplementationSpecific
            path: /apache*
            backend:
              service:
                name: apache-svc
                port:
                  number: 80
          - pathType: ImplementationSpecific
            path: /*
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
